--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://4740c21c-d609-4846-af12-c9b4abe84d6b.preview.emergentagent.com
 WDS_SOCKET_PORT=443
